--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>Test page<title>
+</head>
+<body>
+  <h1>Hello world!</h1>
+  <footer>denchi 2017</footer>
+</body>
+</html>
