--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@ body, html {
   <div class="w3-content w3-container w3-padding-64" id="about">
     <h3 class="w3-center">ABOUT ME</h3>
     <p class="w3-center"><em>Who I'm I</em></p>
-    <p>So I finally decided to make a portofolio for my life-long hobby, career and major interest - programming!</p>
+    <p>So I finally decided to make a portofolio. Nonetheless I have a lot of other projects, I only managed to publish information about the ones allready released or the ones I have at least a prototype. I also have a lot of projects for Android / iOS platforms, VR and AR though I can not post because of NDA and agreements.</p>
     <div class="w3-row">
       <div class="w3-col m6 w3-center w3-padding-large">
         <p><b><i class="fa fa-user w3-margin-right"></i>Denis Chiriac<span class="w3-hide-small"> | asm0day</span></b></p><br>
@@ -101,14 +101,11 @@ body, html {
 
       <!-- Hide this text on small devices -->
       <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>Welcome to my website. I am lorem ipsum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-          labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
-          aliquip ex ea commodo consequat. Duis aute irure
-          dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-          occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur
-          adipiscing elit, sed do eiusmod tempor
-          incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-          laboris nisi ut aliquip ex ea commodo consequat.</p>
+        <p>So, I'm a passionate game and application developer. Also like digital drawing and music creation. Most of my personal projects were drawn by me. Except some that have a much better visuals and technique. For that I thank <a href="https://www.facebook.com/vasile.pascal.94651">Vasile</a> and <a href="https://www.facebook.com/postolachi.petru">Petru</a>.</p>
+        <p>My primary programming language is C#. I used it for mostly Unity scripting and Windows Forms (for tools). I'm also experienced with Java (for Android native development). I often use javascript (jQuery, Angular.js and React.js) for web development. Have experience with Objective-C and Swift for iOS.</p>
+        <p>My native language is romanian, but I also speak english and russian (Learning spanish).</p>
+        <p>I like running, hiking and surfing</p>
+        <p>Thanks for reading all this non-sense If you have any questions please press <a href="mailto: denis.chiriac@gmail.com">this link</a></p>
       </div>
     </div>
     <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
