--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@ body, html {
     <div class="w3-row-padding w3-center w3-section">
 
       <div class="w3-col m4">
-        <img src="/w3images/ragerun-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A 2d side-scrooling pixelart runner<br><small>Unfortunately can not credit the character's painter. Couldn't find the source.<br>If you are drew it - please contact me!</small>">
+        <img src="/w3images/ragerun-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A 2d side-scrooling pixelart runner<br><small>Unfortunately can not credit the character's painter. Couldn't find the source.<br>If you drew it - feel free to contact me!</small>">
       </div>
 
       <div class="w3-col m4">
