changed background to gif, removed my picture and some projects

--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@ body, html {
 
 /* First image (Logo. Full height) */
 .bgimg-1 {
-  background-image: url('/w3images/parallax1.jpg');
-  min-height: 100%;
+  background-image: url('./w3images/parallax1.gif');
+  height: 540px;
 }
 
 /* Second image (Portfolio) */
 .bgimg-2 {
-  background-image: url("/w3images/parallax2.jpg");
+  background-image: url("./w3images/parallax2.jpg");
   min-height: 400px;
 }
 
 /* Third image (Contact) */
 .bgimg-3 {
-  background-image: url("/w3images/parallax3.jpg");
+  background-image: url("./w3images/parallax3.jpg");
   min-height: 400px;
 }
 
@@ -92,24 +92,14 @@ body, html {
     <h3 class="w3-center">ABOUT ME</h3>
     <p class="w3-center"><em>Who I'm I</em></p>
     <p>So I finally decided to make a portofolio. Nonetheless I have a lot of other projects, I only managed to publish information about the ones allready released or the ones I have at least a prototype. I also have a lot of projects for Android / iOS platforms, VR and AR though I can not post because of NDA and agreements.</p>
-    <div class="w3-row">
-      <div class="w3-col m6 w3-center w3-padding-large">
-        <p><b><i class="fa fa-user w3-margin-right"></i>Denis Chiriac<span class="w3-hide-small"> | asm0day</span></b></p><br>
-        <img src="/w3images/avatar_hat.jpg" class="w3-round w3-image w3-opacity w3-hover-opacity-off" alt="Photo of Me"
-          width="500" height="333">
-      </div>
-
-      <!-- Hide this text on small devices -->
-      <div class="w3-col m6 w3-hide-small w3-padding-large">
-        <p>So, I'm a passionate game and application developer. Also like digital drawing and music creation. Most of my personal projects were drawn by me. Except some that have a much better visuals and technique. For that I thank <a href="https://www.facebook.com/vasile.pascal.94651">Vasile</a> and <a href="https://www.facebook.com/postolachi.petru">Petru</a>.</p>
-        <p>My primary programming language is C#. I used it for mostly Unity scripting and Windows Forms (for tools). I'm also experienced with Java (for Android native development). I often use javascript (jQuery, Angular.js and React.js) for web development. Have experience with Objective-C and Swift for iOS.</p>
-        <p>My native language is romanian, but I also speak english and russian (Learning spanish).</p>
-        <p>I like running, hiking and surfing</p>
-        <p>Thanks for reading all this non-sense If you have any questions please press <a href="mailto: denis.chiriac@gmail.com">this link</a></p>
-      </div>
+    <p>I'm a passionate game and application developer. Also like digital drawing and music creation. Most of my personal projects were drawn by me. Except some that have a much better visuals and technique.</p>
+    <p>My primary programming language is C#. I used it for mostly Unity scripting and Windows Forms (for tools). I'm also experienced with Java (for Android native development). I often use javascript (jQuery, Angular.js and React.js) for web development. Have experience with Objective-C and Swift for iOS.</p>
+    <p>My native language is romanian, but I also speak english and russian (Learning spanish).</p>
+    <p>I like running, hiking and surfing</p>
+    <p>Thanks for reading all this non-sense If you have any questions please press <a href="mailto: denis.chiriac@gmail.com">this link</a></p>
     </div>
     <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-    <p class="w3-wide"><img src="/w3images/unity.png" style="width: 16px;height: 16px; margin-right: 10px;"/>Unity</p>
+    <p class="w3-wide"><img src="./w3images/unity.png" style="width: 16px;height: 16px; margin-right: 10px;"/>Unity</p>
     <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
     </div>
@@ -117,7 +107,7 @@ body, html {
     <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
     </div>
-    <p class="w3-wide"><img src="/w3images/react-native.png" style="width: 16px;height: 16px; margin-right: 10px;"/>React Native</p>
+    <p class="w3-wide"><img src="./w3images/react-native.png" style="width: 16px;height: 16px; margin-right: 10px;"/>React Native</p>
     <div class="w3-light-grey">
       <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
     </div>
@@ -161,11 +151,11 @@ body, html {
     <!-- HOPA -->
     <div class="w3-row-padding w3-center">
       <div class="w3-col m6">
-        <img src="/w3images/p1a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Brink of Consciousness: Lonely Hearts Murders<br>C++ | HOPA<br><a href='https://www.bigfishgames.com/games/8000/brink-of-consciousness-the-lonely-hearts-murd/'>Go to store</a>">
+        <img src="./w3images/p1a.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Brink of Consciousness: Lonely Hearts Murders<br>C++ | HOPA<br><a href='https://www.bigfishgames.com/games/8000/brink-of-consciousness-the-lonely-hearts-murd/'>Go to store</a>">
       </div>
 
       <div class="w3-col m6">
-        <img src="/w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Nearwood Collector's Edition<br>C++ | HOPA<br><a href='https://www.bigfishgames.com/games/8152/nearwood/'>Go to store</a>">
+        <img src="./w3images/p2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Nearwood Collector's Edition<br>C++ | HOPA<br><a href='https://www.bigfishgames.com/games/8152/nearwood/'>Go to store</a>">
       </div>     
     </div>
 
@@ -178,23 +168,23 @@ body, html {
     <div class="w3-row-padding w3-center w3-section">
 
       <div class="w3-col m3">
-        <img src="/w3images/screen-0.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Game launch screen">
+        <img src="./w3images/screen-0.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Game launch screen">
       </div>
 
       <div class="w3-col m3">
-        <img src="/w3images/screen-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lots of creatures, each having specific stats and abilities">
+        <img src="./w3images/screen-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lots of creatures, each having specific stats and abilities">
       </div>
 
       <div class="w3-col m3">
-        <img src="/w3images/screen-7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="You control your heroes and use them to win the battle">
+        <img src="./w3images/screen-7.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="You control your heroes and use them to win the battle">
       </div>
 
       <div class="w3-col m3">
-        <img src="/w3images/screen-11.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="At the end of a raid you must face a boss">
+        <img src="./w3images/screen-11.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="At the end of a raid you must face a boss">
       </div>
     </div>
 
-    <!--Shadow Seekers-->
+    <!--Cyberpat
     <p class="w3-center">
       <br><em>Project CyberPat<br><i>(working title, in development)</i><br>Unity | Desktop | iOS | Android | Multiplayer</em>
     </p>
@@ -202,11 +192,11 @@ body, html {
     <div class="w3-row-padding w3-center w3-section">
 
       <div class="w3-col m6">
-        <img src="/w3images/cyberpat-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Drive to your next destination">
+        <img src="./w3images/cyberpat-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Drive to your next destination">
       </div>
 
       <div class="w3-col m6">
-        <img src="/w3images/cyberpat-5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lots of interaction and many ways of handling things">
+        <img src="./w3images/cyberpat-5.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Lots of interaction and many ways of handling things">
       </div>
 
     </div>
@@ -214,34 +204,35 @@ body, html {
     <div class="w3-row-padding w3-center w3-section">
 
       <div class="w3-col m6">
-        <img src="/w3images/cyberpat-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pixelart look and feel">
+        <img src="./w3images/cyberpat-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Pixelart look and feel">
       </div>
 
       <div class="w3-col m6">
-        <img src="/w3images/cyberpat-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Unique Cyberpunk style">
+        <img src="./w3images/cyberpat-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Unique Cyberpunk style">
       </div>
     </div>
+    -->
 
-    <!--Rage run-->
+    <!-- Rage run
     <p class="w3-center">
       <br><em>Project Ragerun<br><i>(working title, in development)</i><br>Unity | Desktop</em>
-    </p>
+    </p> 
 
     <div class="w3-row-padding w3-center w3-section">
 
       <div class="w3-col m4">
-        <img src="/w3images/ragerun-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A 2d side-scrooling pixelart runner<br><small>Unfortunately can not credit the character's painter. Couldn't find the source.<br>If you drew it - feel free to contact me!</small>">
+        <img src="./w3images/ragerun-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A 2d side-scrooling pixelart runner<br><small>Unfortunately can not credit the character's painter. Couldn't find the source.<br>If you drew it - feel free to contact me!</small>">
       </div>
 
       <div class="w3-col m4">
-        <img src="/w3images/ragerun-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Craft, upgrade, buy and sell equipment">
+        <img src="./w3images/ragerun-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Craft, upgrade, buy and sell equipment">
       </div>
 
       <div class="w3-col m4">
-          <img src="/w3images/ragerun-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A classic runner with ultiple layers of gameplay">
+          <img src="./w3images/ragerun-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="A classic runner with ultiple layers of gameplay">
         </div>
 
-    </div>
+    </div>-->
 
     <!--Cowcasino-->
     <p class="w3-center">
@@ -251,19 +242,19 @@ body, html {
     <div class="w3-row-padding w3-center w3-section">
 
       <div class="w3-col m3">
-        <img src="/w3images/cowcasino-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Cartoon-like art style">
+        <img src="./w3images/cowcasino-1.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Cartoon-like art style">
       </div>
 
       <div class="w3-col m3">
-        <img src="/w3images/cowcasino-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Try your luck on the slot machine.">
+        <img src="./w3images/cowcasino-2.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Try your luck on the slot machine.">
       </div>
 
       <div class="w3-col m3">
-          <img src="/w3images/cowcasino-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Buy, level-up your creatures and earn money.">
+          <img src="./w3images/cowcasino-3.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Buy, level-up your creatures and earn money.">
       </div>
 
       <div class="w3-col m3">
-        <img src="/w3images/cowcasino-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Multiple locations to keep you engaged">
+        <img src="./w3images/cowcasino-4.jpg" style="width:100%" onclick="onClick(this)" class="w3-hover-opacity" alt="Multiple locations to keep you engaged">
       </div>
 
     </div>
@@ -291,7 +282,7 @@ body, html {
 
     <div class="w3-row w3-padding-32 w3-section">
       <div class="w3-col m4 w3-container">
-        <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
+        <img src="./w3images/map.jpg" class="w3-image w3-round" style="width:100%">
       </div>
       <div class="w3-col m8 w3-panel">
         <div class="w3-large w3-margin-bottom">
