Removed some line

--- a/index.html
+++ b/index.html
@@ -92,11 +92,11 @@ body, html {
     <h3 class="w3-center">ABOUT ME</h3>
     <p class="w3-center"><em>Who I'm I</em></p>
     <p>So I finally decided to make a portofolio. Nonetheless I have a lot of other projects, I only managed to publish information about the ones allready released or the ones I have at least a prototype. I also have a lot of projects for Android / iOS platforms, VR and AR though I can not post because of NDA and agreements.</p>
-    <p>I'm a passionate game and application developer. Also like digital drawing and music creation. Most of my personal projects were drawn by me. Except some that have a much better visuals and technique.</p>
+    <p>I'm a passionate game and application developer. Also like digital drawing and music creation. Most of my personal projects were drawn by me.</p>
     <p>My primary programming language is C#. I used it for mostly Unity scripting and Windows Forms (for tools). I'm also experienced with Java (for Android native development). I often use javascript (jQuery, Angular.js and React.js) for web development. Have experience with Objective-C and Swift for iOS.</p>
     <p>My native language is romanian, but I also speak english and russian (Learning spanish).</p>
     <p>I like running, hiking and surfing</p>
-    <p>Thanks for reading all this non-sense If you have any questions please press <a href="mailto: denis.chiriac@gmail.com">this link</a></p>
+    <p>Thanks for reading all this non-sense If you have any questions please email me <a href="mailto: denis.chiriac@gmail.com">here</a></p>
     </div>
     <p class="w3-large w3-center w3-padding-16">Im really good at:</p>
     <p class="w3-wide"><img src="./w3images/unity.png" style="width: 16px;height: 16px; margin-right: 10px;"/>Unity</p>
