--- a/index.html
+++ b/index.html
@@ -107,27 +107,12 @@
   </div>
 
   <!-- Container (About Section) -->
-  <div class="w3-content w3-container w3-padding-64" id="about"></div>
-  <p class="w3-large w3-center w3-padding-16">I'm really good at:</p>
-  <p class="w3-wide"><img src="./w3images/unity.png" style="width: 16px;height: 16px; margin-right: 10px;" />Unity</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>
-  <p class="w3-wide"><img src="./w3images/react-native.png"
-      style="width: 16px;height: 16px; margin-right: 10px;" />React Native</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:80%">80%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-  </div>
-  </div>
-
+  <div class="w3-content w3-container w3-padding-64" id="about"></div>  
+  
+  <!-- Skills -->
+  <p class="w3-large w3-center w3-padding-16">I'm really good at:</p>  
+  <!-- Skills DIV-->
+  <div class="w3-content w3-container w3-padding-64" id="skills"></div>
   <!-- Second Parallax Image with Portfolio Text -->
   <div class="bgimg-2 w3-display-container w3-opacity-min">
     <div class="w3-display-middle">
