added github, fixed title

--- a/index.html
+++ b/index.html
@@ -1,97 +1,97 @@
 <!DOCTYPE html>
 <html>
-<title>asm0day's portfolio</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-<style>
-  body,
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    font-family: "Lato", sans-serif;
-  }
+  <title>Portfolio</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lato">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <style>
+    body,
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+      font-family: "Lato", sans-serif;
+    }
 
-  body,
-  html {
-    height: 100%;
-    color: #777;
-    line-height: 1.8;
-  }
+    body,
+    html {
+      height: 100%;
+      color: #777;
+      line-height: 1.8;
+    }
 
-  /* Create a Parallax Effect */
-  .bgimg-1,
-  .bgimg-2,
-  .bgimg-3 {
-    background-attachment: fixed;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
-  }
-
-  /* First image (Logo. Full height) */
-  .bgimg-1 {
-    background-image: url('./w3images/parallax1.gif');
-    height: 540px;
-  }
-
-  /* Second image (Portfolio) */
-  .bgimg-2 {
-    background-image: url("./w3images/parallax2.jpg");
-    min-height: 400px;
-  }
-
-  /* Third image (Contact) */
-  .bgimg-3 {
-    background-image: url("./w3images/parallax3.jpg");
-    min-height: 400px;
-  }
-
-  .w3-wide {
-    letter-spacing: 10px;
-  }
-
-  .w3-hover-opacity {
-    cursor: pointer;
-  }
-
-  .w3-grayscale {
-    filter: url(filters.svg#grayscale);
-    /* Firefox 3.5+ */
-    filter: rgb(221, 221, 221);
-    /* IE6-9 */
-    -webkit-filter: grayscale(0.75);
-    /* Google Chrome & Safari 6+ */
-    -webkit-transition: all .5s ease-in-out;
-    transition: all .5s ease-in-out;
-    
-    width:100%;
-    object-fit: cover;
-  }
-
-  .w3-grayscale:hover {
-    filter: none;
-    -webkit-filter: none;
-    width:100%;
-    object-fit: cover;
-  }  
-
-  /* Turn off parallax scrolling for tablets and phones */
-  @media only screen and (max-device-width: 1600px) {
-
+    /* Create a Parallax Effect */
     .bgimg-1,
     .bgimg-2,
     .bgimg-3 {
-      background-attachment: scroll;
+      background-attachment: fixed;
+      background-position: center;
+      background-repeat: no-repeat;
+      background-size: cover;
+    }
+
+    /* First image (Logo. Full height) */
+    .bgimg-1 {
+      background-image: url('./w3images/parallax1.gif');
+      height: 540px;
+    }
+
+    /* Second image (Portfolio) */
+    .bgimg-2 {
+      background-image: url("./w3images/parallax2.jpg");
       min-height: 400px;
     }
-  }
-</style>
+
+    /* Third image (Contact) */
+    .bgimg-3 {
+      background-image: url("./w3images/parallax3.jpg");
+      min-height: 400px;
+    }
+
+    .w3-wide {
+      letter-spacing: 10px;
+    }
+
+    .w3-hover-opacity {
+      cursor: pointer;
+    }
+
+    .w3-grayscale {
+      filter: url(filters.svg#grayscale);
+      /* Firefox 3.5+ */
+      filter: rgb(221, 221, 221);
+      /* IE6-9 */
+      -webkit-filter: grayscale(0.75);
+      /* Google Chrome & Safari 6+ */
+      -webkit-transition: all .5s ease-in-out;
+      transition: all .5s ease-in-out;
+      
+      width:100%;
+      object-fit: cover;
+    }
+
+    .w3-grayscale:hover {
+      filter: none;
+      -webkit-filter: none;
+      width:100%;
+      object-fit: cover;
+    }  
+
+    /* Turn off parallax scrolling for tablets and phones */
+    @media only screen and (max-device-width: 1600px) {
+
+      .bgimg-1,
+      .bgimg-2,
+      .bgimg-3 {
+        background-attachment: scroll;
+        min-height: 400px;
+      }
+    }
+  </style>
 
 <body style="background: black">
 
